--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==21.2.0
 cachetools==4.2.2
 certifi==2021.5.30
 charset-normalizer==2.0.6
@@ -9,12 +10,20 @@ google-crc32c==1.2.0
 google-resumable-media==2.0.3
 googleapis-common-protos==1.53.0
 idna==3.2
+iniconfig==1.1.1
+packaging==21.0
+pluggy==1.0.0
 protobuf==3.18.0
+py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyparsing==2.4.7
+pytest==6.2.5
+pytest-mock==3.6.1
 python-dotenv==0.19.0
 requests==2.26.0
 rsa==4.7.2
 six==1.16.0
+toml==0.10.2
 urllib3==1.26.7
 WooCommerce==3.0.0
