--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ attrs==21.2.0
 cachetools==4.2.2
 certifi==2021.5.30
 charset-normalizer==2.0.6
+click==8.0.1
+Flask==2.0.1
 google-api-core==2.0.1
 google-auth==2.1.0
 google-cloud-core==2.0.0
@@ -11,6 +13,9 @@ google-resumable-media==2.0.3
 googleapis-common-protos==1.53.0
 idna==3.2
 iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 packaging==21.0
 pluggy==1.0.0
 protobuf==3.18.0
@@ -26,4 +31,5 @@ rsa==4.7.2
 six==1.16.0
 toml==0.10.2
 urllib3==1.26.7
+Werkzeug==2.0.1
 WooCommerce==3.0.0
