--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pytest==6.2.5
 pytest-mock==3.6.1
 python-dotenv==0.19.0
 requests==2.26.0
+requests-mock==1.9.3
 rsa==4.7.2
 six==1.16.0
 toml==0.10.2
